--- a/packages/react-app/public/index.html
+++ b/packages/react-app/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="bg-gray-900 text-gray-100">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="A community driven launchpad." />
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>OnlyMoons</title>
+    <title>RoyalProof Locker</title>
 
     <script>
       ;(darkModeEnabled => {
